src/components/TwitchSidebar/_twitch-sidebar.scss
@import '../../styles/responsive';
@import '@elastic/eui/src/themes/eui-amsterdam/eui_amsterdam_colors_dark.scss';

.twitch-sidebar {
  height: calc(100% - 54px);
  overflow: hidden;
  width: 254px;
  padding-left: 24px;
  display: flex;
  flex-direction: column;

  &__header {
    display: flex;
    align-items: center;
    font-size: 24px;
    font-weight: 600;
    text-transform: capitalize;
    width: 100%;
    height: 57px;
    padding: 16px;
  }

  &__input {
    margin-top: 4px;
  }
  .stream {
    display: flex;
    align-items: center;
    width: 100%;
    padding: 16px 8px;
    cursor: pointer;

    &__delete {
      flex-shrink: 0;
      border-radius: 50%;
    }

    &:hover {
      background-color: lighten($color: $euiColorEmptyShade, $amount: 4%);
      border-radius: 4px;
    }

    .offline {
      filter: grayscale(100%);
    }

    &-info {
      width: 100%;
      margin-left: 8px;

      &__title {
        display: flex;
        align-items: center;
        font-weight: bold;

        .viewer-count {
          margin-left: auto;
          width: 50px;
        }
      }
    }
  }

  &.euiPanel {
    flex-grow: 0;

    &--paddingMedium {
      padding: 0;
    }
  }
}

